# fin-chatbot

./: .env.example  .gitignore  .travis.yml  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  scrapy.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/fin_chatbot/: __init__.py  api.py  cli.py  requirements.txt
src/fin_chatbot/scrapy_spiders/: settings.py  yahoo_finance_spider.py
src/fin_chatbot/services/: Dockerfile  check_postgres_data.py  check_redis_data.py  common_stocks.py  config.py  daily_redis_to_postgres.py  docker-compose.yaml  fetch_data.py  finance_api.py  postgres_manager.py  postgres_processor.py  recommendations.py  redis_manager.py  redis_processor.py  redis_to_postgres.py  requirements.txt  scheduled_fetch.py  scheduled_fetch_to_redis.py  start.sh  test_postgres_connection.py
src/fin_chatbot/services/logs/exim4/: mainlog
tests/: __init__.py  test_api.py  test_fin_chatbot.py  test_recommendations.py
